--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,9 @@
-jupyter
-soccerdata==1.8.7
+fastapi
+uvicorn
+pandas
+SQLAlchemy
+pydantic
 matplotlib==3.8.2
-seaborn==0.13.2
-pandas==2.2.0
 mplsoccer==1.2.2
-statsbombpy==1.12.0
-pyarrow==15.0.0
-tabulate==0.9.0
-highlight-text==0.2
-scikit-learn
-requests~=2.31.0
-cloudscraper>=1.2.71
-asyncio
-playwright
-beautifulsoup4
-undetected-chromedriver==3.5.5
+plotly
+python-multipart
